tests/ui/wal_not_sync.stderr
error[E0277]: `Cell<()>` cannot be shared between threads safely
  --> tests/ui/wal_not_sync.rs:11:19
   |
11 |     assert_sync::<Wal<NullObserver>>();
   |                   ^^^^^^^^^^^^^^^^^ `Cell<()>` cannot be shared between threads safely
   |
   = help: within `Wal`, the trait `Sync` is not implemented for `Cell<()>`
   = note: if you want to do aliasing and mutation between multiple threads, use `std::sync::RwLock`
note: required because it appears within the type `PhantomData<Cell<()>>`
  --> $RUST/core/src/marker.rs
note: required because it appears within the type `Wal`
  --> src/wal.rs
   |
   | pub struct Wal<O: DurabilityObserver = NullObserver> {
   |            ^^^
note: required by a bound in `assert_sync`
  --> tests/ui/wal_not_sync.rs:7:19
   |
 7 | fn assert_sync<T: Sync>() {}
   |                   ^^^^ required by this bound in `assert_sync`
